casper/java/fake_java_scanner.cc

#line 1 "casper/java/fake_java_scanner.rl"
/**
 * @file fake_java_scanner.cc Implementation of FakeJavaScanner
 *
 * Copyright (c) 2010-2016 Neto Ranito & Seabra LDA. All rights reserved.
 *
 * This file is part of casper.
 *
 * casper is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * casper  is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with casper.  If not, see <http://www.gnu.org/licenses/>.
 */

#include "casper/java/fake_java_scanner.h"
#include "osal/osalite.h"


#line 29 "casper/java/fake_java_scanner.cc"
static const int casper_fake_java_scanner_start = 202;
static const int casper_fake_java_scanner_first_final = 202;
static const int casper_fake_java_scanner_error = 0;

static const int casper_fake_java_scanner_en_main = 202;


#line 176 "casper/java/fake_java_scanner.rl"


/**
 * @brief Constructor
 */
casper::java::FakeJavaScanner::FakeJavaScanner ()
{
    
#line 46 "casper/java/fake_java_scanner.cc"
	{
	(    cs_) = casper_fake_java_scanner_start;
	(    ts_) = 0;
	(    te_) = 0;
	(   act_) = 0;
	}

#line 184 "casper/java/fake_java_scanner.rl"
    OSAL_UNUSED_PARAM(casper_fake_java_scanner_first_final);
    OSAL_UNUSED_PARAM(casper_fake_java_scanner_error);
    OSAL_UNUSED_PARAM(casper_fake_java_scanner_en_main);
}

/**
 * @brief Destructor
 */
casper::java::FakeJavaScanner::~FakeJavaScanner ()
{
    /* empty */
}

/**
* @brief Set input.
*
* @param a_expression
* @param a_length
*/
void casper::java::FakeJavaScanner::SetInput (const char* a_expression, size_t a_lenght)
{
    casper::Scanner::SetInput(a_expression, a_lenght);
    
#line 78 "casper/java/fake_java_scanner.cc"
	{
	(    cs_) = casper_fake_java_scanner_start;
	(    ts_) = 0;
	(    te_) = 0;
	(   act_) = 0;
	}

#line 207 "casper/java/fake_java_scanner.rl"
}

casper::java::FakeJavaParser::token_type casper::java::FakeJavaScanner::Scan (casper::java::FakeJavaParser::semantic_type* o_val, casper::java::location* a_location)
{
    casper::java::FakeJavaParser::token_type ret = casper::java::FakeJavaParser::token::END;
    bool has_quotes = false;

    
#line 95 "casper/java/fake_java_scanner.cc"
	{
	if ( (     p_) == (    pe_) )
		goto _test_eof;
	switch ( (    cs_) )
	{
tr0:
#line 1 "NONE"
	{	switch( (   act_) ) {
	case 0:
	{{goto st0;}}
	break;
	case 63:
	{{(     p_) = (((    te_)))-1;}
                             if ( (int)(te_ - ts_) - 2 < 0 ) {
                                *o_val = "";
                                ret = (FakeJavaParser::token_type) '"';
                                {(     p_)++; (    cs_) = 202; goto _out;}
                             } else {
                                if ( has_quotes ) {
                                    char* buf = (char*) malloc(te_ - ts_ - 1);
                                    if ( buf == NULL ) {
                                        ret = (FakeJavaParser::token_type) '"'; // Ooops we got out of memory, force parse error
                                    }

                                    char* src = (char*) ts_ + 1;
                                    char* dst = buf;
                                    while ( src <= te_ ) {
                                       if ( *(src) == '"' ) {
                                          ++src;
                                          *(dst++) = *(src++);
                                       } else {
                                          *(dst++) = *(src++);
                                       }
                                    }
                                    *(dst) = 0;
                                    *o_val = buf;
                                    free(buf);
                                } else {
                                    *o_val = std::string(ts_ + 1, te_ - ts_ - 2);
                                }
                                ret = FakeJavaParser::token::TEXTLITERAL;
                                {(     p_)++; (    cs_) = 202; goto _out;}
                             }
                           }
	break;
	}
	}
	goto st202;
tr3:
#line 141 "casper/java/fake_java_scanner.rl"
	{{(     p_) = (((    te_)))-1;}{
                             if ( (int)(te_ - ts_) - 2 < 0 ) {
                                *o_val = "";
                                ret = (FakeJavaParser::token_type) '"';
                                {(     p_)++; (    cs_) = 202; goto _out;}
                             } else {
                                if ( has_quotes ) {
                                    char* buf = (char*) malloc(te_ - ts_ - 1);
                                    if ( buf == NULL ) {
                                        ret = (FakeJavaParser::token_type) '"'; // Ooops we got out of memory, force parse error
                                    }

                                    char* src = (char*) ts_ + 1;
                                    char* dst = buf;
                                    while ( src <= te_ ) {
                                       if ( *(src) == '"' ) {
                                          ++src;
                                          *(dst++) = *(src++);
                                       } else {
                                          *(dst++) = *(src++);
                                       }
                                    }
                                    *(dst) = 0;
                                    *o_val = buf;
                                    free(buf);
                                } else {
                                    *o_val = std::string(ts_ + 1, te_ - ts_ - 2);
                                }
                                ret = FakeJavaParser::token::TEXTLITERAL;
                                {(     p_)++; (    cs_) = 202; goto _out;}
                             }
                           }}
	goto st202;
tr12:
#line 123 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{
                                ret = FakeJavaParser::token::FIELD;
                                *o_val = std::string(ts_ + 3, te_ - ts_ - 4);
                                {(     p_)++; (    cs_) = 202; goto _out;}
                           }}
	goto st202;
tr15:
#line 129 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{
                                ret = FakeJavaParser::token::PARAMETER;
                                *o_val = std::string(ts_ + 3, te_ - ts_ - 4);
                                {(     p_)++; (    cs_) = 202; goto _out;}
                           }}
	goto st202;
tr18:
#line 117 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{
                                ret = FakeJavaParser::token::VARIABLE;
                                *o_val = std::string(ts_ + 3, te_ - ts_ - 4);
                                {(     p_)++; (    cs_) = 202; goto _out;}
                           }}
	goto st202;
tr19:
#line 111 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::AND       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr20:
#line 135 "casper/java/fake_java_scanner.rl"
	{{(     p_) = (((    te_)))-1;}{
                                ret = FakeJavaParser::token::NUM;
                                *o_val = double_value_;
                                {(     p_)++; (    cs_) = 202; goto _out;}
                           }}
	goto st202;
tr24:
#line 110 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::EQ        ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr30:
#line 51 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::Boolean      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr35:
#line 85 "casper/java/fake_java_scanner.rl"
	{{(     p_) = (((    te_)))-1;}{ ret = FakeJavaParser::token::TK_DATE      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr40:
#line 86 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_DATE_FORMAT; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr44:
#line 50 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::Double       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr48:
#line 55 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_FALSE     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr54:
#line 52 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::Integer      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr57:
#line 82 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::Math         ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr62:
#line 53 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::String       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr65:
#line 54 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_TRUE      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr67:
#line 83 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::abs          ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr77:
#line 77 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::doubleValue  ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr85:
#line 73 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::endsWith     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr89:
#line 68 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::equals       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr95:
#line 57 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_false     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr103:
#line 78 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::doubleValue  ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr107:
#line 71 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::format       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr115:
#line 84 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::indexOf      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr120:
#line 75 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::intValue     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr126:
#line 64 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::isEmpty      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr128:
#line 81 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::isNaN        ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr134:
#line 65 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::length       ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr141:
#line 76 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::longValue    ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr144:
#line 87 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_NEW        ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr146:
#line 58 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::TK_null      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr151:
#line 63 "casper/java/fake_java_scanner.rl"
	{{(     p_) = (((    te_)))-1;}{ ret = FakeJavaParser::token::parse        ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr157:
#line 61 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::parseBoolean ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr162:
#line 60 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::parseDouble  ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr164:
#line 62 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::parseInt     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr170:
#line 70 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::replace      ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr180:
#line 72 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::startsWith   ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr187:
#line 69 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::substring    ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr201:
#line 67 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::toLowerCase  ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr206:
#line 74 "casper/java/fake_java_scanner.rl"
	{(    te_) = (     p_)+1;{ ret = FakeJavaParser::token::toString     ; {(     p_)++; (    cs_) = 202; goto _out;} }}
	goto st202;
tr214:
#line 66 "casper/java/fake_java_scanner.rl"
